# cpp-workshop

./: .gitignore  README.md
.github/workflows/: CI.yml
AssemplyLine-Doctest/src/: FactoryAssemblyLine.cpp
AssemplyLine-GTest/: CMakeLists.txt
AssemplyLine-GTest/src/: FactoryAssemblyLine.h
AssemplyLine-GTest/tests/: FactoryAssemblyLineTest.cpp
assembly-line/: CMakeLists.txt  README.md
assembly-line/tests/: FactoryAssemblyLineTest.cpp
code-coverage/src/: OrderProcessor.cpp  OrderProcessor.h
enhance/: promise.cpp
ex0-starter/: README.md
ex01-app-builder/: README.md
ex01-app-builder/solution/part-1/: lambda-gen.cpp
ex02-convert/: README.md
ex03-enhance/: README.md
ex05-test/src/: main.cpp
ex05-test/test_solution/: test_logger.cpp
ex06-pattern/: main.cpp
ex06-pattern/PatternsApp/: PatternsApp.cpp  PatternsApp.sln  PatternsApp.vcxproj  PatternsApp.vcxproj.filters  README..md  specs.md
ex06-pattern/patterns/: README..md  specs.md
ex09-assembly-line/: README.md
ex1-app-builder/: README.md
ex1-enhance/: README.md
ex11-upgrade/: ARCHITECTURE.md  CMakeLists.txt  README.md  UPGRADE_PROMPTS.md
ex11-upgrade/src/: CMakeLists.txt  config.cpp  control_loop.cpp  kinematics.cpp  logging.cpp  main.cpp  math_util.cpp  planner.cpp  robot.cpp  sensor.cpp
ex11-upgrade/src/include/robokit/: config.hpp  control_loop.hpp  kinematics.hpp  logging.hpp  math_util.hpp  planner.hpp  robot.hpp  sensor.hpp
ex11-upgrade/tests/: CMakeLists.txt  test_kinematics_planner.cpp
ex2-convert/: combinatorics.c
ex3-code-coverage/: README.md
ex3-test-singleton/: README.md  log.txt
ex3-test-singleton/src/: logger.cpp  logger.h
ex3-test-singleton/tests/: test_logger.cpp
ex4-performance/: expensive.cpp
ex4-template-pattern/: README..md
ex4-test-singleton/: CMakeLists.txt
ex4-test-singleton/src/: logger.cpp
ex5-template-pattern/: README..md
ex6-transform/sample-transformation/: bitswap.c
ex7-simulation/: README.md
ex7-transform/: README.md
fix-bugs/: README.md  diy-shared.cpp
performance/: README.md
review/src/: task.cpp
simulation/banking/: README-bank-scenario.md  bank-scenario.md
simulation/healthcare/: README-healthcare-scenario.md  healthcare-scenario.md
simulation/manufacturing/: README-chips-scenario.md  microchips.md
transform/: README.md
